<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="40dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_green_flag2x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/check1"
        android:layout_width="24dp"
        android:layout_height="17dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/tick2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <ImageView
        android:id="@+id/check2"
        android:layout_width="24dp"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/tick2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check1" />

    <ImageView
        android:id="@+id/check3"
        android:layout_width="24dp"
        android:layout_height="17dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/tick2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check2" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/museo_sans300"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/checkmark1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.729" />

    <TextView
        android:id="@+id/checkmark1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/museo_sans300"
        android:text="@string/checkmark1"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/check1"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/checkmark2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/museo_sans300"
        android:text="@string/checkmark2"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/check2"
        app:layout_constraintTop_toBottomOf="@+id/checkmark1" />

    <TextView
        android:id="@+id/checkmark3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/museo_sans300"
        android:text="@string/checkmark3"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/check3"
        app:layout_constraintTop_toBottomOf="@+id/checkmark2" />

    <ImageView
        android:id="@+id/login_color"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/gradient_button_background_2x"
        app:layout_constraintBottom_toTopOf="@+id/account_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/account_color"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:src="@drawable/gradient_button_background_2x"
        app:layout_constraintBottom_toBottomOf="@+id/account_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textColor="@color/black"
        android:fontFamily="@font/museo_sans500"
        app:layout_constraintBottom_toTopOf="@+id/account_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkmark3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/account_creation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:text="@string/accountCreation"
        android:textColor="@color/black"
        android:fontFamily="@font/museo_sans500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>